--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.2
   flutter_dotenv: ^2.1.0
+  http: ^0.12.1
 
 dev_dependencies:
   flutter_test:
