--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_dotenv: ^2.1.0
   http: ^0.12.1
+  geolocator: ^5.3.1
+  provider: ^4.1.2
 
 dev_dependencies:
   flutter_test:
