--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   http: ^0.12.1
   geolocator: ^5.3.1
   provider: ^4.1.2
+  shared_preferences: ^0.5.7+3
 
 dev_dependencies:
   flutter_test:
