--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   geolocator: ^5.3.1
   provider: ^4.1.2
   shared_preferences: ^0.5.7+3
+  google_fonts: ^1.1.0
 
 dev_dependencies:
   flutter_test:
