--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   provider: ^4.1.2
   shared_preferences: ^0.5.7+3
   google_fonts: ^1.1.0
+  get_it: ^4.0.2
 
 dev_dependencies:
   flutter_test:
