--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   shared_preferences: ^0.5.7+3
   google_fonts: ^1.1.0
   get_it: ^4.0.2
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
