--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   google_fonts: ^1.1.0
   get_it: ^4.0.2
   intl: ^0.16.1
+  flutter_svg: ^0.17.4
 
 dev_dependencies:
   flutter_test:
@@ -27,3 +28,4 @@ flutter:
   uses-material-design: true
   assets:
     - .env
+    - assets/images
