--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   get_it: ^4.0.2
   intl: ^0.16.1
   flutter_svg: ^0.17.4
+  firebase_core: ^0.4.5
+  firebase_analytics: ^5.0.2
+  firebase_crashlytics: ^0.1.3+3
 
 dev_dependencies:
   flutter_test:
