--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_core: ^0.4.5
   firebase_analytics: ^5.0.2
   firebase_crashlytics: ^0.1.3+3
+  url_launcher: ^5.5.0
 
 dev_dependencies:
   flutter_test:
