--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_dotenv: ^2.1.0
   http: ^0.12.1
-  geolocator: ^5.3.1
+  geolocator: ^5.3.2+2
   provider: ^4.1.2
   shared_preferences: ^0.5.7+3
   google_fonts: ^1.1.0
