--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,12 @@ dependencies:
   google_fonts: ^1.1.0
   get_it: ^4.0.2
   intl: ^0.16.1
-  flutter_svg: ^0.17.4
-  firebase_core: ^0.4.5
-  firebase_analytics: ^5.0.2
+  flutter_svg: ^0.18.1
+  firebase_core: ^0.5.0
+  firebase_analytics: ^6.0.0
   firebase_crashlytics: ^0.1.3+3
   url_launcher: ^5.5.0
+  loader_overlay: ^1.1.0+1
 
 dev_dependencies:
   flutter_test:
