--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,10 @@ dependencies:
   get_it: ^4.0.2
   intl: ^0.16.1
   flutter_svg: ^0.18.1
-  firebase_core: ^0.5.0
+  firebase_core: ^0.5.0+1
   firebase_analytics: ^6.0.0
-  firebase_crashlytics: ^0.1.3+3
-  url_launcher: ^5.5.0
+  firebase_crashlytics: ^0.2.1+1
+  url_launcher: ^5.7.2
   loader_overlay: ^1.1.0+1
 
 dev_dependencies:
