--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,18 +9,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.0
   flutter_dotenv: ^2.1.0
-  http: ^0.12.1
-  geolocator: ^5.3.2+2
-  provider: ^4.1.2
-  shared_preferences: ^0.5.7+3
+  http: ^0.12.2
+  geolocator: ^6.0.0+4
+  provider: ^4.3.2+2
+  shared_preferences: ^0.5.12
   google_fonts: ^1.1.0
-  get_it: ^4.0.2
+  get_it: ^5.0.1
   intl: ^0.16.1
-  flutter_svg: ^0.18.1
+  flutter_svg: ^0.19.0
   firebase_core: ^0.5.0+1
-  firebase_analytics: ^6.0.0
+  firebase_analytics: ^6.0.2
   firebase_crashlytics: ^0.2.1+1
   url_launcher: ^5.7.2
   loader_overlay: ^1.1.0+1
