--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,8 @@ dependencies:
   get_it: ^5.0.1
   intl: ^0.16.1
   flutter_svg: ^0.19.0
-  firebase_core: ^0.5.0+1
-  firebase_analytics: ^6.0.2
+  firebase_core: ^0.5.1
+  firebase_analytics: ^6.1.0
   firebase_crashlytics: ^0.2.1+1
   url_launcher: ^5.7.2
   loader_overlay: ^1.1.0+1
