--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,14 @@ dependencies:
   firebase_crashlytics: ^0.2.4
   url_launcher: ^5.7.10
   loader_overlay: ^1.1.1
+  hive: ^1.4.4+1
+  hive_flutter: ^0.3.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^0.8.2
+  build_runner: ^1.10.10
 
 flutter:
   uses-material-design: true
